--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/create-pin.js", "use": "@vercel/node" }
+    { "src": "api/*.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1.js" }
   ]
 }
